--- a/index.html
+++ b/index.html
@@ -41,5 +41,7 @@
   </main>
 
   <script type="module" src="/js/main.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
 </body>
 </html>
