--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <header>
+      <div id="restaurant-container">
+        <div id="restaurant-progress"></div>
+    </div>
         <div class="container">
           <img src="images/cooking.png" alt="logochef" class="logo" />
           <h1>Divij & Shauraya Recipe Book</h1>
